status/re/resources/0.1.0/macos/darwin-23.6.0/gnat=10.3.2/resources-0.1.0.yaml.log
Test ran at 2024-12-28 13:37:17.342584+00:00

SOLUTION:
resources=0.1.0: Utility library to handle project resources at run-time
Origin: commit a418da627ec3d18f50f60edaee41a2f47f173a0e from https://github.com/alire-project/resources.git
Properties:
   Author: Alire Team
   Description: Utility library to handle project resources at run-time
   License: MIT
   Maintainer: Fabien Chouteau <fabien.chouteau@gmail.com>
   Maintainers_Logins: Fabien-Chouteau
   Maintainers_Logins: mosteo
   Name: resources
   Tag: utils
   Version: 0.1.0
   Website: https://github.com/alire-project/resources


LOG:
Note: Deploying resources=0.1.0...
Note: Building resources/resources.gpr...
Setup
   [mkdir]        object directory for project Resources
   [mkdir]        library directory for project Resources
Compile
   [C]            whereami.c
   [Ada]          resources.adb
In file included from /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/_stdlib.h:62,
                 from /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/stdlib.h:58,
                 from /Users/runner/work/alire-crates-ci/alire-crates-ci/test/4127053d-6c20-409f-a5ff-850dcbeb542c/resources_0.1.0_a418da62/whereami/src/whereami.c:25:
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/cdefs.h:567:30: error: missing ')' after "__has_attribute"
  567 | #if __has_cpp_attribute(clang::unsafe_buffer_usage)
      |                              ^~
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/cdefs.h:567:32: error: missing binary operator before token "unsafe_buffer_usage"
  567 | #if __has_cpp_attribute(clang::unsafe_buffer_usage)
      |                                ^~~~~~~~~~~~~~~~~~~

   compilation of whereami.c failed

gprbuild: *** compilation phase failed
stderr: Command ["gprbuild", "-s", "-j0", "-p", "-P", "/Users/runner/work/alire-crates-ci/alire-crates-ci/test/4127053d-6c20-409f-a5ff-850dcbeb542c/resources_0.1.0_a418da62/resources.gpr"] exited with code 4
ERROR: Command ["gprbuild", "-s", "-j0", "-p", "-P", "/Users/runner/work/alire-crates-ci/alire-crates-ci/test/4127053d-6c20-409f-a5ff-850dcbeb542c/resources_0.1.0_a418da62/resources.gpr"] exited with code 4
stderr: ALIRE.CHECKED_ERROR
stderr: Command ["gprbuild", "-s", "-j0", "-p", "-P", "/Users/runner/work/alire-crates-ci/alire-crates-ci/test/4127053d-6c20-409f-a5ff-850dcbeb542c/resources_0.1.0_a418da62/resources.gpr"] exited with code 4
stderr: raised ALIRE.CHECKED_ERROR : alire-stored-error:1
Load address: 0x104751000
Call stack traceback locations:
0x105059415 0x104d2ce83 0x104f3fdf9 0x104f40581 0x104ea0ac3 0x104e9ef99 0x104ebb873 0x104f07dc1 0x104f0681a 0x104ebb9b8 0x104e9f349 0x1047b09c1 0x1047c1578 0x1047c601c 0x10484c05c 0x1048573b8 0x104752605 0x104755914


Warning: resources=0.1.0 successfully retrieved but its build failed.
There are no dependencies.
ERROR: Build ended with errors
